Revision history for Date-Easy

{{$NEXT}}

0.05      2018-05-31 02:50:30-07:00 America/Los_Angeles

    [New Features]
    * Can now subtract one datetime from another (gives seconds).
    * Can now subtract one date from another (gives days).

    [Distro Fixes]
    * Change date-parse unit tests to calculate epoch dates
      so they work in all timezones.
      github #10 (thx Ron Savage (RSAVAGE))

0.04      2017-07-27 17:47:54-07:00 America/Los_Angeles

    [Bug Fixes]
    * `add_months` was returning a Time::Piece instead of a Date::Easy
      object (fixed)

    [New Features]
    * New `day_of_year` method
      returns day of year (1-366)
    * New `split` method
      splits to (Y, m, d) for date, (Y, m, d, H, M, S) for datetime
    * New methods: `add_seconds`, `subtract_seconds`, `add_minutes`,
      `subtract_minutes`, `add_hours`, `subtract_hours`, `add_days`,
      `subtract_days`, `add_weeks`, `subtract_weeks`, `subtract_months`,
      `add_years`, `subtract_years`
    * New class: Date::Easy::Units
      simpler interface for date math

    [Docs]
    * Added "Language" section to "Limitations"
    * Added "Inspiration and Credits" section to POD
    * Documented effects of upstream bug RT/105031

0.03      2017-02-21 19:45:46-08:00 America/Los_Angeles

    [New Features]
    * New `add_months` method
    * New `iso8601` method (and `iso` alias)

    [Interface Changes]
    * Have `as` able to recognize a string like '-Ymd'
      (same as `strftime('%Y-%m-%d')`)

    [Docs]
    * Make all method headers consistent (show arguments)

0.02      2016-06-25 02:00:48-07:00 America/Los_Angeles

    [New Features]
    * New `time_zone` method

    [Interface Changes]
    * Make `add` and `subtract` in ::Date private methods
      (this fixes POD coverage tests)

    [Distro Fixes]
    * Stop using `\h` in test regexen because 5.8 doesn't recognize it

    [Docs]
    * Added basic POD
