@@ -10,5 +10,6 @@ version = 0.05
 
 [Prereqs]
 Time::Piece = 1.30
+Time::Local = 1.26
 Date::Parse = 1.17
 Time::ParseDate = 2015.0925
