@@ -2,6 +2,11 @@ Revision history for Date-Easy
 
 {{$NEXT}}
 
+    [Bug Fixes]
+    * workaround for upstream bug in Date::Parse [base bug RT/53413]
+      now doing a more faithful recreation of D::P's strptime
+      and using it for both dates and datetimes
+
 0.05      2018-05-31 02:50:30-07:00 America/Los_Angeles
 
     [New Features]
